rev fix homepage spacing

--- a/public/stylesheets/about.styles.css
+++ b/public/stylesheets/about.styles.css
@@ -60,9 +60,9 @@ hoopsPopover, italyPopover {
     font-weight: 600;
   }
 
-  /* .main-spacer {
+  .main-spacer {
     margin-top: 7vw;
-  } */
+  }
 
   firstStory {
     display: -ms-flexbox;
